fix: avoid errors for old versions of a SGBackup, SGDbOps and SGScript