@@ -5,7 +5,6 @@
 
 package io.stackgres.operator.mutation;
 
-import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -16,29 +15,46 @@ import com.github.fge.jsonpatch.AddOperation;
 import com.github.fge.jsonpatch.JsonPatchOperation;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import io.fabric8.kubernetes.client.CustomResource;
 import io.stackgres.common.StackGresContext;
 import io.stackgres.common.StackGresProperty;
+import io.stackgres.operatorframework.admissionwebhook.AdmissionRequest;
 import io.stackgres.operatorframework.admissionwebhook.AdmissionReview;
+import io.stackgres.operatorframework.admissionwebhook.Operation;
 import io.stackgres.operatorframework.admissionwebhook.mutating.JsonPatchMutator;
 
+@SuppressFBWarnings(value = "UPM_UNCALLED_PRIVATE_METHOD",
+    justification = "False positive")
 public interface DefaultAnnotationMutator
     <R extends CustomResource<?, ?>, T extends AdmissionReview<R>>
     extends JsonPatchMutator<T> {
 
   JsonPointer ANNOTATION_POINTER = JsonPointer.of("metadata", "annotations");
 
-  default List<JsonPatchOperation> getAnnotationsToAdd(R resouce) {
+  @Override
+  default List<JsonPatchOperation> mutate(T review) {
+    AdmissionRequest<R> request = review.getRequest();
+    if (request.getOperation() == Operation.CREATE) {
+      return getAnnotationsPatches(request.getObject());
+    } else if (request.getOperation() == Operation.UPDATE
+        && getAnnotationsToOverwrite(request.getObject()).isPresent()) {
+      return getAnnotationsPatches(request.getObject());
+    } else {
+      return List.of();
+    }
+  }
 
+  private List<JsonPatchOperation> getAnnotationsPatches(R resource) {
     Optional<Map<String, String>> crAnnotations = Optional
-        .ofNullable(resouce.getMetadata().getAnnotations());
+        .ofNullable(resource.getMetadata().getAnnotations());
 
-    Map<String, String> givenAnnotations = crAnnotations.orElseGet(IdentityHashMap::new);
+    Map<String, String> givenAnnotations = crAnnotations.orElseGet(Map::of);
 
     List<String> existentAnnotations = givenAnnotations.keySet()
         .stream()
         .filter(k -> k.startsWith(StackGresContext.STACKGRES_KEY_PREFIX))
-        .collect(Collectors.toList());
+        .toList();
 
     Map<String, String> defaultAnnotations = getDefaultAnnotationValues();
 
@@ -52,23 +68,16 @@ public interface DefaultAnnotationMutator
       operations.add(new AddOperation(ANNOTATION_POINTER, FACTORY.objectNode()));
     }
 
-    operations.addAll(buildAnnotations(annotationsToAdd));
+    operations.addAll(buildAnnotationsToAdd(annotationsToAdd));
+
+    getAnnotationsToOverwrite(resource).ifPresent(
+        annotationsToOverwrite -> operations.addAll(
+            buildAnnotationsToOverwrite(annotationsToOverwrite)));
 
     return operations.build();
   }
 
-  default List<JsonPatchOperation> buildAnnotations(Map<String, String> annotations) {
-
-    return annotations.entrySet().stream()
-        .map(entry -> new AddOperation(
-            ANNOTATION_POINTER.append(entry.getKey()),
-            FACTORY.textNode(entry.getValue())
-        )).collect(ImmutableList.toImmutableList());
-
-  }
-
-  default Map<String, String> getDefaultAnnotationValues() {
-
+  private Map<String, String> getDefaultAnnotationValues() {
     String operatorVersion = StackGresProperty.OPERATOR_VERSION.getString();
 
     String operatorVersionKey = StackGresContext.VERSION_KEY;
@@ -76,5 +85,27 @@ public interface DefaultAnnotationMutator
     return ImmutableMap.<String, String>builder()
         .put(operatorVersionKey, operatorVersion)
         .build();
+  }
+
+  private List<JsonPatchOperation> buildAnnotationsToAdd(Map<String, String> annotations) {
+    return annotations.entrySet().stream()
+        .<JsonPatchOperation>map(entry -> new AddOperation(
+            ANNOTATION_POINTER.append(entry.getKey()),
+            FACTORY.textNode(entry.getValue())
+        ))
+        .toList();
+  }
+
+  private List<JsonPatchOperation> buildAnnotationsToOverwrite(Map<String, String> annotations) {
+    return annotations.entrySet().stream()
+        .<JsonPatchOperation>map(entry -> new AddOperation(
+            ANNOTATION_POINTER.append(entry.getKey()),
+            FACTORY.textNode(entry.getValue())
+        ))
+        .toList();
+  }
+
+  default Optional<Map<String, String>> getAnnotationsToOverwrite(R resource) {
+    return Optional.empty();
   }
 }
